--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     ]
   },
   "dependencies": {
+    "cordova-android": "~7.0.0",
     "cordova-plugin-camera": "^4.0.1",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-plugin-keyboard": "^2.2.1"
   }
 }
